# osinfo

./: README.md  dune-project  osinfo.opam  osinfo.opam.template
.github/workflow/: gen.yml
.github/workflows/: gen.yml  ocaml-ci.yml  test.yml
src/: dune  main.ml  os.ml  osinfo.ml
test/: dune  test.ml
